fix issues (#24)
Co-authored-by: Shashi Kiran <shashi@Shashis-MacBook-Pro-2.local>